# sema

./: .dockerignore  .gitignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  Cargo.toml  Jakefile  Makefile  README.md  context7.json  deferred.md  dist-workspace.toml  package-lock.json  sema.toml
.cargo/: config.toml
.claude/commands/: llm-verify.md  release.md
.config/: nextest.toml
.github/workflows/: ci.yml  mcpb.yml  publish-npm.yml  publish.yml  release.yml  sema-web-tests.yml  verify.yml
assets/icons/: README.md
benchmarks/: README.md
benchmarks/1brc/: 1brc.scm  1brc.sema  Dockerfile  run-benchmarks.sh  run-native-benchmarks.py
crates/sema/: Cargo.toml  build.rs
crates/sema-core/: Cargo.toml
crates/sema-dap/: Cargo.toml
crates/sema-docs/: Cargo.toml  builtin_docs.generated.json
crates/sema-llm/: Cargo.toml
crates/sema-llm/src/: anthropic.rs  builtins.rs  cassette.rs  embeddings.rs  fake.rs  gemini.rs  http.rs  ollama.rs  openai.rs  pricing-data.json  pricing.rs  provider.rs  types.rs
crates/sema-llm/tests/: openai_stream_tools_live.rs
crates/sema-mcp/: Cargo.toml
crates/sema-otel/: Cargo.toml
crates/sema-otel/src/: compat.rs  file_exporter.rs  imp.rs  lib.rs  noop.rs  provider_map.rs  testing.rs
crates/sema-otel/tests/: closed_port.rs  file_export.rs
crates/sema-stdlib/: Cargo.toml
crates/sema-vm/: Cargo.toml
crates/sema-wasm/: Cargo.toml
crates/sema-workflow/: Cargo.toml
docs/: adr.md  build-time-report.md  deferred.md  limitations.md  performance-roadmap.md  rust-idiomatic-review.md  sema-coder-language-friction.md  shell-style.md  syntactic-and-architectural-review.md  vm-status.md  wip.md
docs/bugs/: OPEN.md  async-breakpoints.md  int-float-equality-lossy-above-2pow53.md  integer-arithmetic-silently-wraps-expt-truncates-exponent.md  negative-zero-map-key-breaks-btreemap-lookup.md  reentrant-native-vm-nesting-overflows-rust-stack.md  (+1 more)
docs/design/: living-code.md
examples/: advent-of-code.sema  ascii-art.sema  async-everything.sema  async-fan-out.sema  async-pipeline.sema  async-race-timeout.sema  async-stress.sema  async-worker-pool.sema  card-game.sema  dsl-builder.sema  eliza-web.sema  eliza.sema  emoji.sema  expr-evaluator.sema  game-of-life.sema  glados-downloads.sema  interpreter.sema  json-api.sema  math-and-crypto.sema  meta-eval.sema  multimethods.sema  pico-blink.sema  pico-jukebox.sema  pico-midi.sema  pico-piano.sema  pico-show.sema  pretty-print.sema  quickcheck.sema  shape-geometry.sema  state-machine.sema  text-processing.sema  threading.sema  turtle-svg.sema  unicode.sema  web-server.sema
fuzz/: README.md  grammar-fuzz.sema
jake/: bench.jake  docs.jake  examples.jake  mcpb.jake  playground.jake  release.jake  rust.jake  scripts.jake  test.jake  ui.jake  wasm.jake  web.jake
mcpb/: manifest.json  sema-linux
playground/: build.mjs  index.html  package-lock.json  style.css  vercel.json
scripts/: bench.sh  build-examples.sh  check-publish-list.sh  docs-search-gate.sh  gen-brand-assets.py  gen-icon-assets.py  grammar-fuzz.sh  pack-mcpb.sh  pgo-build.sh  publish-mcp-registry.sh  run-examples.sh  smoke-bytecode.sh  test-packaged-sema-web.sh  update-pricing.sh
ui/: README.md  eslint.config.js  package-lock.json  package.json
website/: og-manifest.json  og-template.html  package.json
(+664 files in other folders)
